fix: font size and letter spacing

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -60,10 +60,17 @@ html, body {
 .text-h1-semi-bold {
   font-weight: 900;
   font-size: 56px;
+  letter-spacing: 3px;
 }
 .text-h2-semi-bold {
   font-weight: 900;
   font-size: 40px;
+  letter-spacing: 3px;
+}
+.text-h2-small-semi-bold {
+  font-weight: 900;
+  font-size: 32px;
+  letter-spacing: 1.5px;
 }
 .text-h3-semi-bold {
   font-weight: 900;
